# rpi_dht22

./: Makefile.am  Makefile.in  README.md  configure  configure.in  dht22.c
